# sleeper-mcp-skill

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
scripts/: setup_private_auth.py  setup_private_auth_browser.py
skills/sleeper/: SKILL.md
src/sleeper_mcp/: __init__.py  client.py  config.py  private_auth.py  private_auth_browser.py  private_auth_setup.py  private_client.py  server.py
tests/: test_client.py
